bad/for_class_over_null.example_compiler_output
ERROR
[1mbad/for_class_over_null.lat:5:13: [1;31merror: [0;1mfor cannot iterate over value of non-array type `null`[m
	for (Y x : null) {}
	           [1;32m^[m
